--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         }
         hr{
             background-color: #B5D5C5;
+            border-style: none;
+            height: 2px;
+            width: 100px;
         }
     </style>
 </head>
@@ -23,7 +26,7 @@
            <p>My signature phrase is "Laugh , keep laughing and forget everything else".</p> </td>
         </tr>
     </table>
-    <hr size="3" noshade>
+    <hr size="3" noshade> 
     <h2 style="color: #B5D5C5;">Books and Teachings </h2>
     <ul style="color: #B5D5C5;">
         <li>Catherine Lejealle, Thierry Delécolle,<strong><a href="https://www.dunod.com/entreprise-et-economie/aide-memoire-marketing-digital-0">Marketing Digital Aide-Mémoire</a></strong>, 2ème édition, DUNOD 2022</li>
