--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
             background-color: #FFFFE8;
         }
         hr{
-            background-color: #B5D5C5;
             border-style: none;
-            height: 2px;
-            width: 100px;
+            border-top-style:dotted ;
+            border-color: greey;
+            border-width: 5px;
+            width: 5%;
+            
+            
         }
     </style>
 </head>
