--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
             background-color: #FFFFE8;
         }
         hr{
-            border-style: none;
-            border-top-style:dotted ;
-            border-color: greey;
-            border-width: 5px;
-            width: 5%;
-            
+           border-style: none;
+           border-top-style:dotted;
+           border-color: grey;
+           border-width: 5px;
+           width: 5%;
             
         }
     </style>
