--- a/index.html
+++ b/index.html
@@ -2,19 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bryan's Personal Site</title>
-    <style>
-        body {
-            background-color: #FFFFE8;
-        }
-        hr{
-           border-style: none;
-           border-top-style:dotted;
-           border-color: grey;
-           border-width: 5px;
-           width: 5%;
-            
-        }
-    </style>
+    <link rel="stylesheet" href="Css/Style.css">
 </head>
 <body>
     <table cellspacing="20" >
