--- a/Contact.html
+++ b/Contact.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Details</title>
+    <link rel="stylesheet" href="Css/Style.css">
+
 </head>
-<body style="background-color: #FFD4D4;">
+<body>
     <h1>My Contact Details</h1>
     <ul>
         <li> e-mail:B.g.c@hotmail.be</li>
         <li>Phone number: Ask me</li>
         <li><a href="index.html">Home page.</a></li>
     </ul>
+    <hr>
     <form action="mailto:b.g.c@hotmail.be" method="post" enctype="text/plain">
         <label>Your Name:</label>
         <input type="text" name="yourName " value=""><br>
