--- a/myHobbies.html
+++ b/myHobbies.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Hobbies</title>
+    <link rel="stylesheet" href="Css/Style.css">
+
 </head>
-<body style="background-color: #B5D5C5;">
+<hr>
+<body>
     <h1>My Hobbies</h1>
     <ol>
         <li>Boxing</li>
@@ -19,5 +20,6 @@
         <li>Cooking</li>
     </ol>
     <a href="index.html">Home page.</a>
+    <hr>
 </body>
 </html>
