centre text align

--- a/Contact.html
+++ b/Contact.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Contact Details</title>
     <link rel="stylesheet" href="Css/Style.css">
-
+    
 </head>
-<body>
+<body style="text-align: center;">
     <h1>My Contact Details</h1>
     <ul>
         <li> e-mail:B.g.c@hotmail.be</li>
@@ -23,5 +23,6 @@
         <textarea name="yourMessage " cols="5" rows="5"></textarea><br>
         <input type="submit" name="">
     </form>
+    <hr>
 </body>
 </html>
