--- a/myHobbies.html
+++ b/myHobbies.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="Css/Style.css">
 
 </head>
-<hr>
-<body>
+<body style="text-align: center;">
     <h1>My Hobbies</h1>
+    <hr>
     <ol>
         <li>Boxing</li>
         <ol>
